2009-12-07  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej Stachowiak.

        Object.create fails if properties on the descriptor are getters
        https://bugs.webkit.org/show_bug.cgi?id=32219

        Correctly initialise the PropertySlots with the descriptor object.

        * runtime/ObjectConstructor.cpp:
        (JSC::toPropertyDescriptor):

2009-12-06  Maciej Stachowiak  <mjs@apple.com>

        Not reviewed, build fix.

        Actually tested 64-bit *and* 32-bit build this time.

        * jit/JITOpcodes.cpp:
        (JSC::JIT::emit_op_loop_if_false):

2009-12-06  Maciej Stachowiak  <mjs@apple.com>

        Not reviewed, build fix.

        Really really fix 64-bit build for prior patch (actually tested this time).

        * jit/JITOpcodes.cpp:
        (JSC::JIT::emit_op_loop_if_false):
        (JSC::JIT::emitSlow_op_loop_if_false):

2009-12-06  Maciej Stachowiak  <mjs@apple.com>

        Not reviewed, build fix.

        Really fix 64-bit build for prior patch.

        * jit/JITArithmetic.cpp:
        (JSC::JIT::emitSlow_op_jless):

2009-12-06  Maciej Stachowiak  <mjs@apple.com>

        Not reviewed, build fix.

        Fix 64-bit build for prior patch.

        * jit/JITOpcodes.cpp:
        (JSC::JIT::emitSlow_op_loop_if_less):

2009-12-05  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver Hunt.

        conway benchmark spends half it's time in op_less (jump fusion fails)
        https://bugs.webkit.org/show_bug.cgi?id=32190

        <1% speedup on SunSpider and V8
        2x speedup on "conway" benchmark
        
        Two optimizations:
        1) Improve codegen for logical operators &&, || and ! in a condition context
        
        When generating code for combinations of &&, || and !, in a
        condition context (i.e. in an if statement or loop condition), we
        used to produce a value, and then separately jump based on its
        truthiness. Now we pass the false and true targets in, and let the